--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -38,6 +38,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+
+
 }
 
 
@@ -47,11 +49,11 @@ dependencies {
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'joom-android-alert'
+    bintrayName = 'jzoom-android-alert'
 
     publishedGroupId = 'com.jzoom'
-    libraryName = 'jzoom-android-alert'
-    artifact = 'jzoom-android-alert'
+    libraryName = 'android-alert'
+    artifact = 'android-alert'
 
     libraryDescription = 'An android alert library.'
 
