--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-   // compile project(':android-alert')
-    compile 'com.jzoom:android-alert:1.1'
+    compile project(':android-alert')
+   // compile 'com.jzoom:android-alert:1.1'
 }
