--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: android
 android:
   components:
-    - build-tools-26.0.0
+    - tools
+    - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
     - extra-android-support
-    - sys-img-armeabi-v7a-android-23
 before_install:
   - chmod +x gradlew
 script:
